simple fix to the friend icons at the recommendation section to make it no longer wrap, by setting its container to flex and allowing the nowrap default of flex-wrap do the work

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,6 +91,9 @@ body {
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line); }
+  @media only screen and (max-width: 56.25em) {
+    .detail {
+      padding: 3rem; } }
 
 .description {
   font-size: 1.4rem;
@@ -99,6 +102,10 @@ body {
   padding: 3rem;
   margin-right: 4.5rem;
   flex: 0 0 60%; }
+  @media only screen and (max-width: 56.25em) {
+    .description {
+      padding: 2rem;
+      margin-right: 3rem; } }
 
 .user-reviews {
   display: flex;
@@ -360,6 +367,7 @@ body {
   .recommend__count {
     margin-right: auto; }
   .recommend__friends {
+    display: flex;
     background-color: transparent; }
   .recommend__photo {
     box-sizing: content-box;
@@ -377,8 +385,12 @@ body {
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
-  display: flex;
-  flex-direction: column; }
+  /*   display: flex;
+  flex-direction: column; */ }
+  @media only screen and (max-width: 56.25em) {
+    .review {
+      padding: 2rem;
+      margin-bottom: 3rem; } }
   .review__text {
     margin-bottom: 2rem;
     z-index: 100;
@@ -421,6 +433,9 @@ body {
 .cta {
   padding: 3.5rem 0;
   text-align: center; }
+  @media only screen and (max-width: 56.25em) {
+    .cta {
+      padding: 2.5rem 0; } }
   .cta__book-now {
     font-size: 2rem;
     font-weight: 300;
