--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -223,6 +223,7 @@
     position: relative;
     z-index: 100;
 
+    // The link, meaning the whole item but more specifically the link that takes up all the space (and holds the text and icon)
     @media only screen and (max-width: $bp-medium) {
       justify-content: center;
       padding: 2rem 0;
@@ -433,6 +434,7 @@
   }
 
   &__friends {
+    display: flex; // Simple fix to the friend circles wrapping at smaller viewport, because flex-wrap by default is nowrap
     background-color: transparent;
   }
 
@@ -460,8 +462,13 @@
   position: relative;
   overflow: hidden;
 
-  display: flex;
-  flex-direction: column;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem; // Should be same as detail padding to be more uniform
+  }
+
+  /*   display: flex;
+  flex-direction: column; */
 
   &__text {
     margin-bottom: 2rem;
@@ -515,9 +522,14 @@
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // CALL TO ACTION //////////////////////////////////////////////////////////////////////////////////////////
+// The entire cta container
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
